# opengl_starter

./: CMakeLists.txt
src/: main.cpp
